--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,33 @@ body {
   font-family: sans-serif;
 }
 
+table,
+tr,
+td,
+th {
+  border: 1px solid black;
+}
+
+table {
+  margin: 100px;
+}
+
+tr,
+td,
+th {
+  padding: 10px;
+  width: 100px;
+  height: 30px;
+}
+
 button {
   padding: 10px 20px;
   font-size: 18px;
   font-weight: bold;
   line-height: normal;
+}
+
+.btns-group {
+  width: max-content;
+  margin-left: 100px;
 }
